Revision history for SweetPea

2.00    8/28/2009 11:48 PM EST
        Refactored to use CGI only.
        Added makeapp method to create application structure dynamically.
        Added ability to auto-initialize controllers so that initialization (the _new method) happens dynamically.
2.01    8/31/2009 1:24 AM EST
        Fixed CGI::Session auto-initialization via the plug. Around line 136.
2.02    9/1/2009 6:46 AM EST
        Added method to alter the applications content-type.
        Changing the permissions for generated App.pm files to mode (755).
2.03    9/1/2009 9:00 AM EST
        Fixed POD
2.06    9/10/2009 12:12PM EST
        Fixed POD.
        Added url/uri methods/corrections.
        Added unplug method to re-initialize plugin accessors.
        Install requires CGI::Session.
2.13    9/13/2009 12:12PM EST
        Rewrote entire POD for SweetPea.
2.14    9/18/2009 4:47AM EST
        Fixed bug with path method, added redirect method.
2.16    9/20/2009 0:00XX EST
        Change how application structure is generated.
        Updated plugins method.
        Added makectrl, makemodl, and makeview as additional helper methods.
2.17    9/20/2009 8:18PM EST
        Fixed critical session creation bug.
2.18    9/21/2009 9:07AM EST
        Fixed foward, detach, redirect, makemodl, makectrl, makeview, and makefile methods.
2.19    9/21/2009 4:30PM EST
        Fixed critical session creation routine in the start and _plugins methods.