@@ -7,8 +7,8 @@
 -   [-] Add demos/demo links to the documentation.
 -   [-] Add web application basic functions (discuss sessions, cookies, databases, etc) called GETTING STARTED (After Boiler-Plate)
 -   [-] Expand the on SweetPea::Style namespace (cummunity-driven custom application scaffolding)
--   [-] Add method method to determine get or post submissions
--   [-] Add flash or notice method to convey information across requests
+-   [x] Add method method to determine get or post submissions
+-   [x] Add flash or notice method to convey information across requests
 
 -   [x] Allow the path method to build paths also.
 -   [x] Make global _begin and _end methods run parallel to local _begin and _end
